<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary95"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">
        <Button
            android:id="@+id/done_room_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_butt"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:background="@drawable/button_style"
            app:backgroundTint="@color/defaultColor"/>

        <TextView
            android:id="@+id/room_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="bottom"
            android:text="@string/toolbar_room"
            android:textSize="20sp"
            />
    </androidx.appcompat.widget.Toolbar>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/room_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="100dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_container"
        />

    <Button
        android:id="@+id/add_room_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_butt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_style"
        app:backgroundTint="@color/defaultColor"
        />

</androidx.constraintlayout.widget.ConstraintLayout>